# Model-Framework

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  tasks.py
.github/workflows/: python-package.yml
src/eeg_auth_models_framework/: base.py  model.py  processor.py
src/eeg_auth_models_framework/data/: __init__.py  auditory.py  base.py  readers.py
src/eeg_auth_models_framework/features/: __init__.py  ar.py  base.py  pipeline.py  power.py  statistical.py
src/eeg_auth_models_framework/normalization/: __init__.py  base.py  hist_equal.py  median.py  min_max.py  norm.py  pipeline.py  rescale.py
src/eeg_auth_models_framework/pre_process/: __init__.py  base.py  filtration.py  formatting.py  pipeline.py  window.py
src/eeg_auth_models_framework/reduction/: __init__.py  average.py  base.py
src/eeg_auth_models_framework/training/: __init__.py  base.py  formatting.py  labelling.py  results.py
src/eeg_auth_models_framework/utility/: custom_types.py
src/eeg_auth_models_framework/utils/: conversion.py  logging_helpers.py  pipeline.py
tests/data/: test_auditory.py  test_downloader.py
