[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg_auth_models_framework"
version = "0.0.1"
authors = [
    { name="Cristopher Hernandez", email="22552070+CristopherH95@users.noreply.github.com" },
]
description = "Framework designed to streamline the process of training EEG authentication models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]