[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg_auth_models_framework"
version = "0.1.1"
authors = [
    { name="Cristopher Hernandez", email="22552070+CristopherH95@users.noreply.github.com" },
]
description = "Framework designed to streamline the process of training EEG authentication models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "platformdirs~=3.11.0",
    "requests~=2.31.0",
    "beautifulsoup4~=4.12.0",
    "mne~=1.5.0",
    "pandas~=2.1.0",
    "numpy~=1.25.0",
    "statsmodels~=0.14.0",
    "mne~=1.5.0",
    "scikit-learn~=1.3.1",
    "SciPy~=1.11.4"
]